# data_ingestion_ex8-consumer

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ex7_consumer/: app.py  database.py  export.py  models.py  s3.py  settings.py  sqs.py
src/ex7_consumer/models/: delivery.sql
src/ex8_consumer/: app.py  settings.py
