[project]
name = "ex8-consumer"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Pereira",email = "pnmatheus01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark==3.5.1",
    "python-dotenv",
    "avro"
]

[tool.poetry]
packages = [{include = "ex8_consumer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
